--- a/docs/_static/fonts.css
+++ b/docs/_static/fonts.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.cn/css2?family=Noto+Sans+SC:wght@300;500;700;900&display=swap");
+@import url("https://fonts.googleapis.cn/css2?family=Noto+Sans+SC:wght@200;500;900&display=swap");
 
 @font-face {
     /** https://www.zcool.com.cn/work/ZNTM2NjI0ODQ=.html restricted free-use except for trademark registration 6763 CJK + 100 Arial */
@@ -69,7 +69,7 @@ body {
 
 h1, h2, h3, h4, h5, h6 {
     font-family: 'REEJI ZhenyanGB2.0-GX', var(--font-stack); 
-    font-weight: 500;
+    font-weight: 350;
 }
 
 b, strong {
